--- a/event-service/ChangeLog
+++ b/event-service/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-13  Dave Camp  <campd@oit.edu>
+
+	* event-channel-impl.c (impl_CosEventChannelAdmin_EventChannel__destroy): Removed unused variables.
+
 2000-05-22  Dave Camp  <campd@oit.edu>
 
 	* generic-factory-impl.c (impl_Bonobo_GenericFactory_create_object): 
