--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+2001-01-06  Dave Camp  <dave@helixcode.com>
+
+	* scintilla-control/scintilla.oafinfo: Updated.
+
+	* scintilla-control/scintilla-persist-file.c: Moved highlighting
+	functions to scintilla-highlight.h
+	(impl_load): call set_language_properties() with the mime type of the
+	file.
+	
+	* scintilla-control/scintilla-control.c (scintilla_factory): Add the
+	PersistStream interface to the control.
+
+	* scintilla-control/scintilla-persist-stream.[ch]: New file.
+
+	* scintilla-control/scintilla-highlight.[ch]: New file.
+
+	* configure.in: check for gnome-vfs.
+
 2000-12-18  JP Rosevear  <jpr@helixcode.com>
 
 	* scintilla-control/scintilla-ui.xml: Fix toolbar placement
