Added russian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2001-02-28  Valek Filippov  <frob@df.ru>
+
+	* ru.po: Added russian translation.
+
 2000-12-19  Christian Rose  <menthos@menthos.com>
 
 	* POTFILES.in: Added line.
