--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-03-14  Dirk Vangestel  <dirk.vangestel@advalvas.be>
+
+	* scintilla-control/scintilla-editor-buffer.c (impl_get_chars):
+	Corrected getting only part of the text.
+
 2001-03-06  Dave Camp  <dave@ximian.com>
 
 	* scintilla-control/scintilla-highlight.c (set_language_properties): 
