--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-06-21  JP Rosevear  <jpr@ximian.com>
+
+	* gdl/gdl-tools.h: s/GDF/GDL
+
 2001-07-06  Dave Camp  <dave@ximian.com>
 
 	* scintilla-control/scintilla/Makefile.am (libscintilla_widget_a_SOURCES): Added the .h files.
