--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2001-07-07  Dave Camp  <dave@ximian.com>
+
+	* POTFILES.in: Updated.
+
+	* POTFILES.skip: Added.
+
 2001-02-28  Valek Filippov  <frob@df.ru>
 
 	* ru.po: Added russian translation.
