--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2001-07-09  Christopher R. Gabriel  <cgabriel@cgabriel.org>
+
+	* it.po: Added italian translation from Alessio Frusciante
+	<algol@firenze.linux.it> 
+
 2001-07-07  Dave Camp  <dave@ximian.com>
 
 	* POTFILES.in: Updated.
