--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-08-28  Fatih Demir <kabalak@gtranslator.org>
+
+	* configure.in: Moved "AM_PROG_XML_I18N_TOOLS" after AC_INIT.
+
 2001-08-26  JP Rosevear  <jpr@ximian.com>
 
 	* scintilla-control/scintilla-ui.xml: update place holder name to
