--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2001-10-08  Valek Filippov  <frob@df.ru>
+
+	* ru.po: Updated russian translation.
+
 2001-07-09  Christopher R. Gabriel  <cgabriel@cgabriel.org>
 
 	* it.po: Added italian translation from Alessio Frusciante
