--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-10-28  Christian Rose  <menthos@menthos.com>
+
+	* configure.in: Added "da" to ALL_LINGUAS.
+
 2001-10-09  Gustavo Giráldez  <gustavo.giraldez@gmx.net>
 
 	* Lots of bugfixes and new features to GdlDock by Jeroen
