--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,10 @@
+2001-10-28  Christian Rose  <menthos@menthos.com>
+
+	* da.po: Added Danish translation by
+	Kenneth Christiansen <kenneth@gnu.org>.
+	* sv.po: Updated Swedish translation.
+	* .cvsignore: Added the messages file.
+
 2001-10-08  Valek Filippov  <frob@df.ru>
 
 	* ru.po: Updated russian translation.
