--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-09  Simos Xenitellis  <simos@hellug.gr>
+
+	* el.po: Added Greek translation by 
+	AARG! Anonymous <remailer@aarg.net>
+
 2001-10-28  Christian Rose  <menthos@menthos.com>
 
 	* da.po: Added Danish translation by
